# sudoku

./: .gitignore  CMakeLists.txt  LICENSE  main.cc  main.cpp
game_info/: cell.h  check_unit.cc  check_unit.h  chess_board.cc  chess_board.h  room.h  rooms_unit.cc  rooms_unit.h
game_ui/console/: CMakeLists.txt  console_game.cc  console_game.h  main.cc  windows_console.cc  windows_console.h
game_ui/qt/: CMakeLists.txt  main.cc  main_window.cc  main_window.h  main_window.ui
game_ui/qt/forms/: cell_widget.cc  cell_widget.h  cell_widget.ui  main_window.cc  main_window.h  main_window.ui
